--- a/source/_posts/201706061118.md
+++ b/source/_posts/201706061118.md
@@ -1,8 +1,11 @@
 ---
-title: 搭建私人个性化博客
+title: 搭建个人个性化博客
 date: 2017-06-06 11:18:24
-tags: [Hexo,Blog]
-categories: [skills]
+tags: 
+- Hexo
+- Blog
+categories: 
+- 网站建设与开发
 ---
 
 >- 利用GithubPage和Hexo快速搭建一个属于自己私有的博客网站
