--- a/source/_posts/201706071532.md
+++ b/source/_posts/201706071532.md
@@ -1,12 +1,13 @@
 ---
 title: MarkDown的语法使用说明
-categories:
+categories: 
 - 开发工具
-- 文本编辑器
+- MarkDown
 keywords: 'Blog,txtEdit'
 date: 2017-06-07 15:32:29
-tags:
+tags: 
 - MarkDown
+- 文本编辑
 description: 记录MarkDown在使用过程中常用的语法
 ---
 记录MarkDown在使用过程中常用的语法
