--- a/source/_posts/201706081544.md
+++ b/source/_posts/201706081544.md
@@ -1,5 +1,5 @@
 ---
-title: Strust2开发实践
+title: Strust2开发实践_简单了解
 tags:
   - Struts2
   - Java开发框架
@@ -10,7 +10,7 @@ keywords: 'Blog,Java,Web,前端,后端,Python,PHP,开发者,程序员,javascript
 date: 2017-06-08 15:44:13
 description: Struts2的学习以及开发实践
 ---
-> 一步一步学会Struts2的使用,并深入了解Struts2的原理
+> 了解Struts2的原理以及开发流程
 <!-- more -->
 
 ## Struts2简介
@@ -21,18 +21,18 @@ description: Struts2的学习以及开发实践
 
 ### 对比Servlet
 
-#### 优点
->  
+####
+> **优点**
 1. 业务代码解耦,适合团队开发,将请求发给不同的处理类,从而降低了业务代码的耦合程度
 2. 提升开发效率,提供了一系列API,大大提升项目的开发效率。如 :使用拦截器自动给请求参数转型
 
-#### 缺点
-> 执行效率偏低,需要使用反射、解析XML等技术手段，会降低执行效率
+>**缺点**
+1. 执行效率偏低,需要使用反射、解析XML等技术手段，会降低执行效率
 
 ## Struts2开发实践
 
 ### 需要的基本lib包
-![](http://or5qwkb5l.bkt.clouddn.com/struts_libs.png)
+![](http://or5qwkb5l.bkt.clouddn.com/struts_libs.png) ![struts2_2.4](http://or5qwkb5l.bkt.clouddn.com/struts2_2.4_libs.png)
 
 ### 具体开发流程
  ![](http://or5qwkb5l.bkt.clouddn.com/struts2_request.jpg )
@@ -42,6 +42,7 @@ description: Struts2的学习以及开发实践
 <!-- Struts2前端控制器 -->
 <filter>
     <filter-name>struts2</filter-name>
+<!-- StrutsPrepareAndExecuteFilter.init()方法会加载struts.xml配置文件 -->
     <filter-class>org.apache.struts2.dispatcher.filter.StrutsPrepareAndExecuteFilter</filter-class>
 </filter>
 <filter-mapping>
